# snes_emu

./: .gitignore  APU_COMPONENTS.md  CMakeLists.txt  CPU_ANALYSIS.md  NMITIMEN_ANALYSIS.md  README.md  analyze_cpu_trace.py  analyze_vram.py  build_complete.bat  build_log.txt  build_output.txt  cgram_dump.txt  check_d32c.ps1  check_font.ps1  check_rom_data.ps1  check_rom_font.ps1  check_rom_in_memory.ps1  check_vectors.cpp  debug_spc_memory.cpp  disassemble_ipl.py  find_fail_entry.py  find_fail_entry2.py  font_rendering_analysis.txt  font_rendering_conditions.md  ipl_protocol_explanation.md  mode1_tile_analysis.txt  patch_cmp_to_lda.py  patch_cmp_to_lda2.py  patch_rom.ps1  patch_rom2.ps1  ram_analysis_complete.md  ram_analysis_final.md  ram_analysis_summary.md  restore_patch.py  restore_patch2.py  snes_bpp_determination.md  spc_tests0.asm  spc_tests1.asm  spc_tests2.asm  spctest.sfc.bak  (+10 more)
analysis/: implementation_status.md  snes_features_checklist.md
cputest/: generate_font.py
docs/: 01_project_setup.md  02_architecture_design.md  03_cpu_emulation.md  04_memory_management.md  05_ppu_emulation.md  06_apu_emulation.md  07_input_handling.md  08_rom_loading.md  09_debug_system.md  10_testing_integration.md  CURRENT_STATE_SNAPSHOT.md  DEVELOPMENT_PROGRESS_KR.md  DIAGNOSIS_REPORT_KR.md  DIAGNOSTIC_RESULTS.md  FINAL_STATUS_SUMMARY_KR.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROGRESS_REPORT.md  README.md  SUCCESS_SUMMARY_KR.md  cpu_demonstration.txt
spctest/: build_spc_manual.py  patch_spctest.py  spctest.sfc
src/: main.cpp  main_complete.cpp  main_debug.cpp  (+7 more)
(+19 files in other folders)
